🚀 Configurar workflows para executar make run e gerar artefatos
✨ Novos recursos:
- CI executa make run e disponibiliza outputs como artefatos
- Novo workflow 'Executar Sistema VR' para execução manual
- Upload automático de resultados, logs e relatórios
- Retenção configurada: outputs (90d), logs (30d), relatórios (60d)
- Resumo detalhado da execução no GitHub Actions
- Documentação completa dos workflows

📦 Artefatos gerados:
- vr-resultados: JSON, Excel e TXT principais
- vr-logs: Logs de execução detalhados
- vr-relatorios: Auditorias e resumos executivos

🔧 Configuração:
- Suporte a diferentes ambientes (produção, desenvolvimento, debug)
- Verificação de outputs e estatísticas
- Limpeza automática e preparação de diretórios

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,6 +57,29 @@ jobs:
     - name: Verificar configuração
       run: make config
       
+    - name: Executar sistema VR
+      run: make run
+      env:
+        GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
+        
+    - name: Upload dos Outputs
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: sistema-vr-outputs-${{ github.run_number }}
+        path: |
+          output/
+          !output/logs/*.log
+        retention-days: 30
+        
+    - name: Upload dos Logs
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: sistema-vr-logs-${{ github.run_number }}
+        path: output/logs/
+        retention-days: 7
+      
     - name: Limpeza final
       if: always()
       run: make clean
