--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,8 @@ jobs:
   ci-sistema-vr:
     name: Testes e Validações
     runs-on: ubuntu-latest
-    
+    env:
+      GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
     steps:
     - name: Checkout código
       uses: actions/checkout@v4
